--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect src/index.js" 
+    "start": "nodemon --inspect src/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "express-handlebars": "^5.3.5",
     "nodemon": "^2.0.20"
   }
 }
