--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/hoangmapqnbau/nodejs#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.7.3"
   },
   "devDependencies": {
