--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/hoangmapqnbau/nodejs#readme",
   "dependencies": {
+    "bootstrap-icons": "^1.10.2",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
-    "mongoose": "^6.7.3"
+    "mongoose": "^6.7.3",
+    "mongoose-delete": "^0.5.4"
   },
   "devDependencies": {
     "express-handlebars": "^5.3.5",
